--- a/src/apps/fl-comments-threadded/tabs/v2/limit-content/style.scss
+++ b/src/apps/fl-comments-threadded/tabs/v2/limit-content/style.scss
@@ -22,10 +22,6 @@
             display: flex;
             flex-direction: row;
             padding: 10px 2px;
-
-            .fluid-button {
-                flex: 1 1 auto;
-            }
         }
     }
 }
